testing podman login4

--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -83,9 +83,9 @@ on:
       podman-username:
         required: true
         type: string
-      podman-password:
-        required: true
-        type: string
+      # podman-password:
+      #   required: true
+      #   type: string
       tls-verify:
         required: false
         type: boolean
