testing podman login5

--- a/.github/actions/buildkit/action.yaml
+++ b/.github/actions/buildkit/action.yaml
@@ -201,7 +201,7 @@ runs:
       fi
 
       CACHE_REGISTRY=$(echo ${{ inputs.cache-registry }} | sed 's/\/$//')
-      echo -e "${CYAN}[ INFO ] > Using cache tag ${YELLOW}${CACHE_TAG}${CYAN} and latest tag ${CYAN}${LATEST_TAG}${BLANK}"
+      echo -e "${CYAN}[ INFO ] > Using cache tag ${YELLOW}${CACHE_TAG}${CYAN} and latest tag ${YELLOW}${LATEST_TAG}${BLANK}"
       if [[ "${{ inputs.caching }}" = true && "${{ inputs.cache-registry }}" != "" ]]
       then
         echo -e "${YELLOW}[ EXECUTING ] > Executing build of ${PURPLE}${{ inputs.img-name }}:${{ inputs.tag}}${YELLOW}${BLANK}"
