--- a/.github/actions/checkov/action.yaml
+++ b/.github/actions/checkov/action.yaml
@@ -3,6 +3,10 @@ name: Checkov scan
 description: Scanning files with Checkov
 author: ixxeL
 inputs:
+  prepare:
+    description: Prepare the job when not running in adequate environment
+    required: false
+    default: false
   artefact:
     description: Name of the file or directory to scan
     required: true
@@ -45,10 +49,27 @@ inputs:
 runs:
   using: composite
   steps:
+  - id: prepare
+    if: ${{ inputs.prepare == 'true' }}
+    shell: bash
+    run: |
+      echo -e "${YELLOW}[ EXECUTING ] > Installing dependencies${BLANK}"
+      pip3 install checkov
+      sudo apt install bc
+    env:
+      RED: \033[1;31m
+      GREEN: \033[1;32m
+      YELLOW: \033[1;33m
+      BLUE: \033[1;34m
+      PURPLE: \033[1;35m
+      CYAN: \033[1;36m
+      BLANK: \033[0m
   - id: checkov-scan
     run: |
       set +e
       echo -e "${BLUE}[ STEP - STATIC ANALYSIS ] > Analyzing with Checkov.${BLANK}"
+      echo -e "${CYAN}[ INFO ] > Python version.${BLANK}"
+      python -V
       echo -e "${CYAN}[ INFO ] > Checkov version.${BLANK}"
       checkov --version
 
@@ -176,9 +197,9 @@ runs:
 
         if [[ $(echo "${SCAN_RATIO} > ${{ inputs.gate }}" | bc) -ne 0 ]]
         then
-          echo -e "${GREEN}[ SUCCESS ] > Checkov gate succeeded ! ${{ inputs.gate }} % threshold =< ${SCAN_RATIO} % result ${BLANK}"
+          echo -e "${GREEN}[ SUCCESS ] > Checkov gate succeeded ==> ${YELLOW}${{ inputs.gate }} % < ${SCAN_RATIO} %${GREEN} result ${BLANK}"
         else
-          echo -e "${RED}[ FAIL ] > Checkov gate failed ! ${{ inputs.gate }} % threshold > ${SCAN_RATIO} % result ${BLANK}"
+          echo -e "${RED}[ FAIL ] > Checkov gate failed ==> ${YELLOW}${{ inputs.gate }} % threshold > ${SCAN_RATIO} %${RED} result ${BLANK}"
           exit 1
         fi
       else
