--- a/.github/actions/git-tag/action.yaml
+++ b/.github/actions/git-tag/action.yaml
@@ -3,13 +3,13 @@ name: Git tag
 description: Tagging git repo
 author: fspiers
 inputs:
-  # git-token:
-  #   required: true
   tag-msg:
     required: false
     default: 'ci'
   tag-value:
     required: true
+  commit-sha:
+    required: false
   git-workdir:
     required: false
     default: .
@@ -22,8 +22,6 @@ inputs:
   git-email:
     required: false
     default: username@users.noreply.github.com
-  # repo-url:
-  #   required: true
 
 runs:
   using: composite
@@ -31,39 +29,9 @@ runs:
   - id: git-tag
     run: |
       set +e
-      # REPO_URL=${{ inputs.repo-url }}
       echo -e "${BLUE}[ STEP - TAG GIT REPO ] > Tagging git repo ${REPO_URL}${BLANK}"
       echo -e "${CYAN}[ INFO ] > Git version.${BLANK}"
       git version
-
-      # [[ $REPO_URL == *.git ]] || REPO_URL+=.git
-      # regex_pattern="((git@|https:\/\/).+[:\/]*.*\.git)"
-
-      # if ! [[ ${REPO_URL} =~ $regex_pattern ]]
-      # then
-      #   echo -e "${RED}[ ERROR ] Git URL does not match '$regex_pattern'${BLANK}"
-      #   exit 1
-      # fi
-
-      # if [[ -z ${{ inputs.git-token }} ]]
-      # then
-      #   echo -e "${CYAN}[ INFO ] > No token provided, pushing without authentication.${BLANK}"
-      #   PUSH_URL=${REPO_URL}
-      # else
-      #   echo -e "${CYAN}[ INFO ] > Token has been provided, pushing with authentication.${BLANK}"
-      #   PUSH_URL=$(echo "${REPO_URL}" | sed -e 's|\(https://\)\([^/]*@\)*|\1github-ci-token:'${{ inputs.git-token }}'@|')
-      # fi
-      # echo -e "${CYAN}[ INFO ] > Reworked URL --> ${PUSH_URL}.${BLANK}"
-
-      TAG_MSG="${{ inputs.tag-msg }}"
-      if [ "${TAG_MSG}" == '' ]; then TAG_MSG="Release: ${{ inputs.tag-value }}"; fi
-
-      echo -e "${YELLOW}[ EXECUTING ] > setting up git config to mail ${{ inputs.git-email }} and username ${GITHUB_ACTOR}.${BLANK}"
-      git config --global --add safe.directory "$(realpath "${{ inputs.git-workdir }}")"
-      git config --global user.email "${{ inputs.git-email }}"
-      git config --global user.name "${GITHUB_ACTOR}"
-      git config --global http.sslVerify ${{ inputs.tls-verify }}
-      git config --list
 
       echo -e "${YELLOW}[ EXECUTING ] > Showing repo information.${BLANK}"
       echo -e "${CYAN}[ INFO ] > git status.${BLANK}"
@@ -75,15 +43,14 @@ runs:
       echo -e "${CYAN}[ INFO ] > git origin.${BLANK}"
       git -C ${{ inputs.git-workdir }} remote show origin
 
-      echo -e "${YELLOW}[ EXECUTING ] > tag ${PURPLE}${{ inputs.tag-value }}${YELLOW} and push to destination ${PUSH_URL}${BLANK}"
-      git -C ${{ inputs.git-workdir }} tag -a ${{ inputs.tag-value }} -m "${TAG_MSG}"
-      if [ $? -eq 0 ]
+      if [[ -n "${{ inputs.commit-sha }}" ]]
       then
-        echo -e "${GREEN}[ SUCCESS ] New tag added to origin: ${{ inputs.tag-value }}${BLANK}"
+        COMMIT_TAG=${{ inputs.commit-sha }}
       else
-        echo -e "${RED}[ ERROR ] Could not add tag${BLANK}"
-        exit 1
+        COMMIT_TAG="current"
       fi
+      echo -e "${YELLOW}[ EXECUTING ] > tag ${PURPLE}${{ inputs.tag-value }}${YELLOW} on ${PURPLE}${COMMIT_TAG}${YELLOW} commit and push to destination ${PUSH_URL}${BLANK}"
+      git -C ${{ inputs.git-workdir }} tag -a ${{ inputs.tag-value }} ${{ inputs.commit-sha }} -m "${TAG_MSG}"
       git -C ${{ inputs.git-workdir }} push origin ${{ inputs.tag-value }} --push-option ${{ inputs.push-option }}
 
       if [ $? -eq 0 ]
