--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -9,10 +9,10 @@ on:
         required: false
       registry-password:
         required: false
-      # git-token:
-      #   required: true
+        # git-token:
+        #   required: true
     inputs:
-    # General
+      # General
       build-image:
         required: false
         default: ixxel/toolbox:builder-latest
@@ -42,7 +42,7 @@ on:
       component:
         required: false
         type: string
-    # Checkov
+        # Checkov
       artefact:
         required: true
         type: string
@@ -187,11 +187,9 @@ on:
         required: false
         default: test@mail.com
         type: string
-      # repo-url:
-      #   required: true
-
+        # repo-url:
+        #   required: true
   workflow_dispatch:
-
 jobs:
   # prepare:
   #   name: Prepare
@@ -222,75 +220,76 @@ jobs:
       image: ${{ inputs.build-image }}
       options: --privileged
     steps:
-    - name: Clone code
-      id: clone
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: '0'
-    - name: Set version
-      id: set-version
-      uses: ixxeL-actions/workflows/.github/actions/set-version@main
-      with:
-        component: ${{ inputs.component }}
-    - name: Set variables
-      id: setvars
-      run: |
-        if [[ "${{github.base_ref}}" == "main" || "${{github.ref}}" == "refs/heads/main" || "${{github.base_ref}}" == "master" || "${{github.ref}}" == "refs/heads/master" ]]; then
-          echo "AUTO_PUSH=false" >> $GITHUB_OUTPUT
-        elif [[ "${{github.base_ref}}" =~ "/^release\/.*/" || "${{github.ref}}" =~ "refs/heads/release\/.*" ]]; then
-          echo "AUTO_PUSH=true" >> $GITHUB_OUTPUT
-        fi
-    - name: Podman login
-      id: podman-login
-      if: ${{ inputs.podman-registry != null }}
-      uses: ixxeL-actions/workflows/.github/actions/podman-login@main
-      with:
-        podman-docker: ${{ inputs.podman-docker }}
-        docker-config: ${{ inputs.docker-config }}
-        registry: ${{ inputs.podman-registry }}
-        username: ${{ inputs.podman-username }}
-        password: ${{ secrets.registry-password }}
-        tls-verify: ${{ inputs.tls-verify }}
-        verbose: ${{ inputs.podman-verbose }}
-        docker-hub-login: ${{ inputs.docker-hub-login }}
-    - name: Buildkit build
-      id: buildkit-build
-      uses: ixxeL-actions/workflows/.github/actions/buildkit@main
-      with:
-        workingdir: ${{ inputs.workingdir }}
-        img-name: ${{ inputs.img-name }}
-        tag: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
-        component: ${{ inputs.component }}
-        target-dir: ${{ inputs.target-dir }}
-        github-api-rest-token: ${{ secrets.github-api-rest-token }}
-        github-api-auth: ${{ inputs.github-api-auth }}
-        dockerfile-frontend: ${{ inputs.dockerfile-frontend }}
-        dockerfile-name: ${{ inputs.dockerfile-name }}
-        build-arg: ${{ inputs.build-arg }}
-        push: ${{ steps.setvars.outputs.AUTO_PUSH }}
-        caching: ${{ inputs.caching }}
-        cache-registry: ${{ inputs.cache-registry }}
-        oci-worker-snapshotter: ${{ inputs.oci-worker-snapshotter }}
-    - name: Grype scan
-      id: grype-scan
-      uses: ixxeL-actions/workflows/.github/actions/grype@main
-      continue-on-error: true
-      with:
-        image-ref: ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
-        transport: ${{ inputs.transport }}
-        fail-on: ${{ inputs.fail-on }}
-        output: ${{ inputs.output }}
-        scope: ${{ inputs.scope }}
-        template: ${{ inputs.template }}
-        verbose: ${{ inputs.verbose }}
-    - name: git tag
-      id: git-tag
-      if: contains( github.ref, 'release' ) || contains( github.base_ref, 'release' )
-      uses: ixxeL-actions/workflows/.github/actions/git-tag@main
-      with:
-        tag-msg: 'CI release of ${{ inputs.component }} version ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}'
-        tag-value: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
-        git-workdir: ${{ inputs.git-workdir }}
-        push-option: ${{ inputs.push-option }}
-        repo-url: ${{ inputs.repo-url }}
-        git-email: ${{ inputs.git-email }}
+      - name: Clone code
+        id: clone
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+      - name: Set version
+        id: set-version
+        uses: ixxeL-actions/workflows/.github/actions/set-version@main
+        with:
+          component: ${{ inputs.component }}
+      - name: Set variables
+        id: setvars
+        run: |
+          if [[ "${{github.base_ref}}" == "main" || "${{github.ref}}" == "refs/heads/main" || "${{github.base_ref}}" == "master" || "${{github.ref}}" == "refs/heads/master" ]]; then
+            echo "AUTO_PUSH=false" >> $GITHUB_OUTPUT
+          elif [[ "${{github.base_ref}}" =~ "/^release\/.*/" || "${{github.ref}}" =~ "refs/heads/release\/.*" ]]; then
+            echo "AUTO_PUSH=true" >> $GITHUB_OUTPUT
+          fi
+        uses: null
+      - name: Podman login
+        id: podman-login
+        if: ${{ inputs.podman-registry != null }}
+        uses: ixxeL-actions/workflows/.github/actions/podman-login@main
+        with:
+          podman-docker: ${{ inputs.podman-docker }}
+          docker-config: ${{ inputs.docker-config }}
+          registry: ${{ inputs.podman-registry }}
+          username: ${{ inputs.podman-username }}
+          password: ${{ secrets.registry-password }}
+          tls-verify: ${{ inputs.tls-verify }}
+          verbose: ${{ inputs.podman-verbose }}
+          docker-hub-login: ${{ inputs.docker-hub-login }}
+      - name: Buildkit build
+        id: buildkit-build
+        uses: ixxeL-actions/workflows/.github/actions/buildkit@main
+        with:
+          workingdir: ${{ inputs.workingdir }}
+          img-name: ${{ inputs.img-name }}
+          tag: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
+          component: ${{ inputs.component }}
+          target-dir: ${{ inputs.target-dir }}
+          github-api-rest-token: ${{ secrets.github-api-rest-token }}
+          github-api-auth: ${{ inputs.github-api-auth }}
+          dockerfile-frontend: ${{ inputs.dockerfile-frontend }}
+          dockerfile-name: ${{ inputs.dockerfile-name }}
+          build-arg: ${{ inputs.build-arg }}
+          push: ${{ steps.setvars.outputs.AUTO_PUSH }}
+          caching: ${{ inputs.caching }}
+          cache-registry: ${{ inputs.cache-registry }}
+          oci-worker-snapshotter: ${{ inputs.oci-worker-snapshotter }}
+      - name: Grype scan
+        id: grype-scan
+        uses: ixxeL-actions/workflows/.github/actions/grype@main
+        continue-on-error: true
+        with:
+          image-ref: ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
+          transport: ${{ inputs.transport }}
+          fail-on: ${{ inputs.fail-on }}
+          output: ${{ inputs.output }}
+          scope: ${{ inputs.scope }}
+          template: ${{ inputs.template }}
+          verbose: ${{ inputs.verbose }}
+      - name: git tag
+        id: git-tag
+        if: contains( github.ref, 'release' ) || contains( github.base_ref, 'release' )
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        with:
+          tag-msg: 'CI release of ${{ inputs.component }} version ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}'
+          tag-value: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
+          git-workdir: ${{ inputs.git-workdir }}
+          push-option: ${{ inputs.push-option }}
+          repo-url: ${{ inputs.repo-url }}
+          git-email: ${{ inputs.git-email }}
