--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -2,7 +2,14 @@
 name: Automate tag
 on:
   workflow_call:
+    # secrets:
+    #   git-token:
+    #     required: true
     inputs:
+      workingdir:
+        required: false
+        default: .
+        type: string
       runs-on:
         description: OS to run jobs on
         required: false
@@ -26,6 +33,10 @@ on:
       new-ref:
         required: true
         type: string
+      push-option:
+        required: false
+        default: ci.skip
+        type: string
 jobs:
   auto-tag:
     name: auto-tag
@@ -36,10 +47,37 @@ jobs:
     steps:
       - name: Clone code
         uses: actions/checkout@v3
-      - name: Helm linting
-        id: helm-lint
+      - name: substitute-ref
+        id: substitute-ref
         uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
         with:
           workflows-directory: ${{ inputs.workflows-directory }}
           actions-source: ${{ inputs.actions-source }}
           new-ref: ${{ inputs.new-ref }}
+      - name: Git config
+        id: git-config
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        with:
+          git-workdir: ${{ inputs.git-workdir }}
+      - name: Update changelog
+        id: changelog
+        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@main
+        with:
+          workingdir: ${{ inputs.workingdir }}
+          release-name: ${{ inputs.new-ref }}
+      - name: Git push
+        id: git-push
+        uses: ixxeL-actions/workflows/.github/actions/git-push@main
+        with:
+          git-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
+          git-workdir: ${{ inputs.workingdir }}
+          git-staging-dir: ${{ inputs.workingdir }}
+          push-option: ${{ inputs.push-option }}
+      - name: Git tag
+        id: git-tag
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        with:
+          tag-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
+          tag-value: '${{ inputs.new-ref }}'
+          git-workdir: ${{ inputs.workingdir }}
+          push-option: ${{ inputs.push-option }}
