--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -8,7 +8,7 @@ on:
     inputs:
       workingdir:
         required: false
-        default: .
+        default: "./"
         type: string
       runs-on:
         description: OS to run jobs on
@@ -62,7 +62,7 @@ jobs:
         id: git-config
         uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
-          git-workdir: ${{ inputs.git-workdir }}
+          git-workdir: ${{ inputs.workingdir }}
       - name: Update changelog
         id: changelog
         uses: ixxeL-actions/workflows/.github/actions/generate-changelog@main
@@ -74,8 +74,8 @@ jobs:
         uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
           git-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
-          git-workdir: ${{ inputs.git-workdir }}
-          git-staging-dir: ${{ inputs.git-workdir }}
+          git-workdir: ${{ inputs.workingdir }}
+          git-staging-dir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
       - name: Git tag
         id: git-tag
@@ -83,5 +83,5 @@ jobs:
         with:
           tag-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
           tag-value: '${{ inputs.new-ref }}'
-          git-workdir: ${{ inputs.git-workdir }}
+          git-workdir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
