--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -51,6 +51,8 @@ jobs:
     steps:
       - name: Clone code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
       - name: substitute-ref
         id: substitute-ref
         uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
