include tag repo4

--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -2,9 +2,9 @@
 name: Automate tag
 on:
   workflow_call:
-    # secrets:
-    #   git-token:
-    #     required: true
+    secrets:
+      git-token:
+        required: true
     inputs:
       workingdir:
         required: false
