--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
-          token: ${{ inputs.git-token }}
+          token: ${{ secrets.git-token }}
       - name: substitute-ref
         id: substitute-ref
         uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
