--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -183,19 +183,19 @@ jobs:
           fetch-depth: '0'
       - name: Helm linting
         id: helm-lint
-        uses: ixxeL-actions/workflows/.github/actions/helm-lint@main
+        uses: ixxeL-actions/workflows/.github/actions/helm-lint@test
         with:
           workingdir: ${{ inputs.workingdir }}
       - name: Bump version
         id: bump-version
-        uses: ixxeL-actions/workflows/.github/actions/bump-version@main
+        uses: ixxeL-actions/workflows/.github/actions/bump-version@test
         with:
           update: ${{ inputs.chart-update }}
           increment: ${{ inputs.chart-increment }}
           current-version: ${{ steps.helm-lint.outputs.CHART_VERSION }}
       - name: Helm Checkov scan
         id: helm-checkov
-        uses: ixxeL-actions/workflows/.github/actions/checkov@main
+        uses: ixxeL-actions/workflows/.github/actions/checkov@test
         with:
           workingdir: ${{ inputs.workingdir }}
           artefact: ${{ inputs.artefact }}
@@ -212,14 +212,14 @@ jobs:
           framework: ${{ inputs.framework }}
       - name: Helm Unit testing
         id: helm-unittest
-        uses: ixxeL-actions/workflows/.github/actions/helm-unittest@main
+        uses: ixxeL-actions/workflows/.github/actions/helm-unittest@test
         with:
           workingdir: ${{ inputs.workingdir }}
           with-subchart: ${{ inputs.with-subchart }}
           tests-dir: ${{ inputs.tests-dir }}
       - name: Helm Templating
         id: helm-template
-        uses: ixxeL-actions/workflows/.github/actions/helm-template@main
+        uses: ixxeL-actions/workflows/.github/actions/helm-template@test
         with:
           workingdir: ${{ inputs.workingdir }}
           strict: ${{ inputs.strict }}
@@ -232,7 +232,7 @@ jobs:
           output-file: ${{ inputs.output-file }}
       - name: Helm Packaging
         id: helm-package
-        uses: ixxeL-actions/workflows/.github/actions/helm-package@main
+        uses: ixxeL-actions/workflows/.github/actions/helm-package@test
         with:
           workingdir: ${{ inputs.workingdir }}
           chart-name: ${{ steps.helm-lint.outputs.CHART_NAME }}
@@ -258,19 +258,19 @@ jobs:
       #     pkg-path: ${{ steps.helm-package.outputs.PKG_PATH }}
       - name: Chart update
         id: chart-update
-        uses: ixxeL-actions/workflows/.github/actions/chart-update@main
+        uses: ixxeL-actions/workflows/.github/actions/chart-update@test
         with:
           workingdir: ${{ inputs.workingdir }}
           evaluate-update: ${{ inputs.evaluate-update }}
           promotion-version: ${{ steps.bump-version.outputs.VERSION }}
       - name: Helm docs
         id: helm-docs
-        uses: ixxeL-actions/workflows/.github/actions/helm-docs@main
+        uses: ixxeL-actions/workflows/.github/actions/helm-docs@test
         with:
           chart-search-root: ${{ inputs.workingdir }}
       - name: Git push
         id: git-push
-        uses: ixxeL-actions/workflows/.github/actions/git-push@main
+        uses: ixxeL-actions/workflows/.github/actions/git-push@test
         with:
           git-token: ${{ secrets.PAT }}
           git-msg: ':package: CI release of helm chart ${{ env.COMPONENT_NAME }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
@@ -279,7 +279,7 @@ jobs:
           push-option: ${{ inputs.push-option }}
       - name: Git tag
         id: git-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@test
         with:
           tag-msg: ':package: CI release of helm chart ${{ env.COMPONENT_NAME }} version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
           tag-value: ${{ steps.bump-version.outputs.VERSION }}
