--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -227,7 +227,7 @@ jobs:
           fetch-depth: '0'
       - name: Set version
         id: set-version
-        uses: ixxeL-actions/workflows/.github/actions/set-version@main
+        uses: ixxeL-actions/workflows/.github/actions/set-version@test2
         with:
           component: ${{ inputs.component }}
       - name: Set variables
@@ -242,7 +242,7 @@ jobs:
       - name: Podman login
         id: podman-login
         if: ${{ inputs.podman-registry != null }}
-        uses: ixxeL-actions/workflows/.github/actions/podman-login@main
+        uses: ixxeL-actions/workflows/.github/actions/podman-login@test2
         with:
           podman-docker: ${{ inputs.podman-docker }}
           docker-config: ${{ inputs.docker-config }}
@@ -254,7 +254,7 @@ jobs:
           docker-hub-login: ${{ inputs.docker-hub-login }}
       - name: Buildkit build
         id: buildkit-build
-        uses: ixxeL-actions/workflows/.github/actions/buildkit@main
+        uses: ixxeL-actions/workflows/.github/actions/buildkit@test2
         with:
           workingdir: ${{ inputs.workingdir }}
           img-name: ${{ inputs.img-name }}
@@ -272,7 +272,7 @@ jobs:
           oci-worker-snapshotter: ${{ inputs.oci-worker-snapshotter }}
       - name: Grype scan
         id: grype-scan
-        uses: ixxeL-actions/workflows/.github/actions/grype@main
+        uses: ixxeL-actions/workflows/.github/actions/grype@test2
         continue-on-error: true
         with:
           image-ref: ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
@@ -285,7 +285,7 @@ jobs:
       - name: git tag
         id: git-tag
         if: contains( github.ref, 'release' ) || contains( github.base_ref, 'release' )
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@test2
         with:
           tag-msg: 'CI release of ${{ inputs.component }} version ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}'
           tag-value: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
